[package]
name = "hls_m3u8"
version = "0.5.0" # remember to update html_root_url
authors = ["Takeru Ohta <phjgt308@gmail.com>", "Luro02 <24826124+Luro02@users.noreply.github.com>"]
description = "HLS m3u8 parser/generator"
homepage = "https://github.com/sile/hls_m3u8"
repository = "https://github.com/sile/hls_m3u8"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hls", "m3u8"]
edition = "2018"
categories = ["parser-implementations"]

[features]
default = []
perf = []

[dependencies]
chrono = { version = "0.4", optional = true }
backtrace = { version = "0.3", features = ["std"], optional = true }

derive_builder = "0.20"
hex = "0.4"
thiserror = "1.0"

derive_more = { version = "1", features = [
    "display",
    "as_ref",
    "from",
    "deref",
    "deref_mut",
] }
shorthand = "0.1"
strum = { version = "0.26.3", features = ["derive"] }

stable-vec = { version = "0.4" }

[dev-dependencies]
pretty_assertions = "1.4.0"
version-sync = "0.9"
automod = "1.0.14"
criterion = "0.5.1"

[[bench]]
name = "bench_main"
harness = false
