[package]
name = "hls_m3u8"
version = "0.7.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>", "Luro02 <24826124+Luro02@users.noreply.github.com>"]
description = "HLS m3u8 parser/generator"
homepage = "https://github.com/sile/hls_m3u8"
repository = "https://github.com/sile/hls_m3u8"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["hls", "m3u8"]
edition = "2024"
rust-version = "1.88"
categories = ["parser-implementations"]

[dependencies]
chrono = { version = "0.4", optional = true }
stable-vec = "0.4"

